[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"


[project]
name = "cache-tuning"
description = ""
authors = [{name = "Honglu Fan"}]
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
